que1 - que5 solved

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
     <h1>NeoG Interview Parctice</h1>
     <button>
-        <a href="./Que1/q1.html">Q1</a>
+        <a href="./Que1(completed)/q1.html">Q1</a>
+    </button>
+
+    <button>
+        <a href="./Que2(half-completed)/q2.html">Q2</a>
+    </button>
+
+    <button>
+        <a href="./Que 3(completed)/q3.html">Q3</a>
+    </button>
+
+    <button>
+        <a href="./Que 4(completed)/q4.html">Q4</a>
     </button>
     
 
