--- a/Que 6(completed)/q6.html
+++ b/Que 6(completed)/q6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="q6.css">
     <title>Q6</title>
 </head>
 <body>
@@ -11,5 +12,11 @@
     <p>
         Create a web app with a button loded. Show a text `loading...` on a web app. However, hide it if I click on the button loaded.
     </p>
+
+    <div id="loading">Loading...</div>
+
+    <button id="btn-loaded">Loaded!!</button>
+
+    <script src="./q6.js"></script>
 </body>
 </html>
