--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <button>
         <a href="./Que 4(completed)/q4.html">Q4</a>
     </button>
+
+    <button>
+        <a href="./Que 6(completed)/q6.html">Q6</a>
+    </button>
     
 
 </body>
