--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <button>
         <a href="./Que 6(completed)/q6.html">Q6</a>
     </button>
+
+    <button>
+        <a href="./Que 13(completed)/q13.html">Q13</a>
+    </button>
     
 
 </body>
